--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,11 @@ android {
         versionName "1.0"
         multiDexEnabled true
     }
+    allprojects {
+        repositories {
+            maven { url "https://jitpack.io" }
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -22,6 +27,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
 //    compile 'com.squareup.picasso:picasso:2.5.2'
@@ -36,5 +42,6 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.7'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.wdullaer:materialdatetimepicker:2.5.0'
+    compile 'com.github.martin90s:ImagePicker:v1.3.1'
     compile files('libs/picasso-2.5.2.jar')
 }
