--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.example.weile.materialdesignexa"
+          xmlns:tools="http://schemas.android.com/tools"
           xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,6 +16,7 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
+        tools:replace="icon,label,theme"
         android:allowBackup="true"
         android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher"
@@ -42,6 +44,9 @@
         <activity android:name=".activity.MyLoveActivity"/>
         <activity android:name=".activity.DoubanMomentActivity"/>
         <activity android:name=".activity.DoubanMomentDetailActivity"/>
+        <activity android:name=".ui.girlphoto.GirlPhotoListActivity"/>
+        <activity android:name=".ui.girlphotodetail.GirlphotoDetailActivity"/>
+        <activity android:name=".activity.TestActivity"/>
         <activity
             android:name=".activity.LockActivity" android:excludeFromRecents="true"
             android:label="@string/app_name"
